--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "axios": "^1.3.6",
     "daisyui": "^2.51.5",
     "firebase": "^9.19.1",
     "localforage": "^1.10.0",
